--- a/index.html
+++ b/index.html
@@ -368,15 +368,15 @@
     </tr>
     <tr>
         <td class="ecsper">ексрпер</td>
-        <td class="ecsper"></td>
-        <td class="ecsper"></td>
-        <td class="ecsper"></td>
+        <td class="ecsper">42550</td>
+        <td class="ecsper">105</td>
+        <td class="ecsper">17</td>
     </tr>
     <tr>
         <td class="master">мастер</td>
-        <td class="master"></td>
-        <td class="master"></td>
-        <td class="master"></td>
+        <td class="master">55000</td>
+        <td class="master">175</td>
+        <td class="master">25</td>
     </tr>
 </table>
 <h3>Голем
