--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <head>
-        <title><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_rnHgW_ifQf0Y-OkVX-j5BKhF8yEnkkkQ3A&usqp=CAU">terraria wiki</title>
+        <title>terraria wiki</title>
     <link rel="stylesheet" href="style.css"/></head>
     <header>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxvPPh5dPB4nBmK_8LvUryPnF5EOK8RPHBwQ&usqp=CAU".>
